services/snappymail/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snappymail
  namespace: snappymail
  labels:
    app.kubernetes.io/name: snappymail
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: snappymail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snappymail
    spec:
      containers:
        - name: snappymail
          image: djmaze/snappymail:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8888
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 15
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/snappymail/_data_
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: snappymail-data
