services/snappymail/service.yml
apiVersion: v1
kind: Service
metadata:
  name: snappymail
  namespace: snappymail
  labels:
    app.kubernetes.io/name: snappymail
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: snappymail
