services/snappymail/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: snappymail
  namespace: snappymail
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: SnappyMail
    gethomepage.dev/description: Webmail
    gethomepage.dev/group: Aplicaciones
    gethomepage.dev/icon: snappymail.png
    gethomepage.dev/href: https://webmail.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - webmail.bonchan.org
  rules:
    - backendRefs:
        - name: snappymail
          port: 80
